--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +37,7 @@
     transform: rotate(360deg);
   }
 } */
+
+body {
+  position: relative;
+}
