Hour data collecting form done

--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -100,7 +100,7 @@
 }
 
 .weeks-area{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     width: 97%;
     height: 50px;
     margin-left: 30px;
@@ -120,5 +120,60 @@
 .track-user{
     width: 270px;
     height: 35.75px;
-    border: 1px solid green;
+    border: 1px solid gray;
+    margin-left: 2rem;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+
+}
+
+.client-projects{
+    /* border: 1px solid blue; */
+    width: 97%;
+    height: 70px;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
+.budget-title{
+    /* border: 1px solid blueviolet; */
+    height: 37.5px;
+    width: 60%;
+    margin-left: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: gray;
+    
+}
+.budget-dates{
+    /* border: 1px solid green; */
+    width: 80%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 13px;
+}
+
+
+.budget-values{
+    /* border: 1px solid orangered; */
+    height: 30px;
+    color: gray;
+    display: flex;
+}
+.budget-dates-values{
+      /* border: 1px solid green; */
+    width: 48%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 22px;
+    font-weight: 600;
+    margin-left: 108px;
+    
+
 }
