--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -13,10 +13,10 @@
 
 .sidebar{
     /* border: 1px solid orange; */
-    width: 14%;
-    position: fixed;
+    /* position: fixed; */
     /* height: 695px; */
-    /* height: 100%; */
+    width: 15.50%;
+    height: 100%;
     border-left: 5px solid green;
     border-right: 0.50px solid gray;
     background-color: #f8f9fa;
@@ -89,7 +89,7 @@
 /* Track Css start  */
 
 .track{
-    border: 1px solid sandybrown;
+    /* border: 1px solid sandybrown; */
     width: 84.50%;
 
 }
@@ -132,7 +132,7 @@
 
 .client-projects{
     /* border: 1px solid blue; */
-    width: 97%;
+    width: 96.40%;
     height: 70px;
     margin-left: 30px;
     margin-top: 20px;
